fixes navbar on mobile

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,16 +8,15 @@
 }
 .navbar {
   width: 100%;
+  padding-bottom: 1.5rem;
 }
-.logo {
-  float: left;
-}
+
 .title {
   position: relative;
   font-size: 1.75rem;
   font-weight: 600;
-  margin: auto;
-  /* margin-bottom: 1.5rem; */
+  margin: 0 auto;
+  padding-bottom: 1rem;
 }
 .navbar ul {
   list-style-type: none;
@@ -56,13 +55,19 @@
 }
 
 @media (min-width: 550px) {
+  .navbar {
+    padding-bottom: 0rem;
+  }
   .logo {
     position: relative;
     top: -25px;
+    float: left;
   }
   .title {
     top: -75px;
     left: -40px;
+    float: left;
+    padding-bottom: 0rem;
   }
   .navbar ul {
     gap: 1em;
